--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "yup": "^1.4.0"
